--- a/fincas.html
+++ b/fincas.html
@@ -57,11 +57,17 @@
             <label for="name" class="form-label">Nombre</label>
             <input type="text" class="form-control" id="name">
             <br>
-            <button class="btn btn-primary" onclick="crearFinca()">Crear Finca</button>
-            <button class="btn btn-info" onclick="listarFinca()">Listar Finca</button>
-            <button class="btn btn-secondary" onclick="editarFinca()">Editar Finca</button>
-            </form>
+            <div>
+                <button class="btn btn-primary" onclick="crearFinca()">Crear Finca</button>
+                <button class="btn btn-info" onclick="listarFinca()">Listar Finca</button>
+                <button class="btn btn-secondary" onclick="editarFinca()">Editar Finca</button>
+            </div>
+            <br>
+            <div id="detail_finca">
+                
+            </div>
         </div>
+        <br>
         <div id="list_finca" class="contenedor_list">
 
         </div>
