--- a/fincas.html
+++ b/fincas.html
@@ -44,7 +44,7 @@
 
             <label for="id" class="form-label">ID</label>
             <input type="number" class="form-control" id="id">
-
+            <label></label>
             <label for="address" class="form-label">Dirección</label>
             <input type="text" class="form-control" id="address">
 
